--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,37 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;600;800&display=swap');
+
+*,
+*::after,
+*::before {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+}
+:root,
+:root.light-theme {
+  --main-bg: hsl(0, 0%, 98%);
+  --color-text: hsl(200, 15%, 8%);
+  --color-elements: hsl(0, 0%, 100%);
+  --color-input: hsl(0, 0%, 52%);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root.dark-theme {
+  --main-bg: hsl(207, 26%, 17%);
+  --color-text: hsl(0, 0%, 100%);
+  --color-elements: hsl(209, 23%, 22%);
+  --color-input: hsl(0, 0%, 100%);
+}
+
+html {
+  font-size: 62.5%;
+}
+
+body {
+  font-size: 1.4rem;
+  line-height: 1.5;
+  font-family: 'Nunito Sans', sans-serif;
+  background-color: var(--main-bg);
+  padding: 2rem;
+  font-weight: 600;
+  color: var(--color-text);
 }
