--- a/src/components/control-bar/search/Search.module.css
+++ b/src/components/control-bar/search/Search.module.css
@@ -1,5 +1,6 @@
 .search {
-  width: 48rem;
+  max-width: 48rem;
+  width: 100%;
   height: 5.6rem;
   display: flex;
   align-items: center;
@@ -14,6 +15,10 @@
   font-size: 1.4rem;
   margin-left: 3rem;
   background-color: transparent;
+}
+
+.search input::placeholder {
+  color: var(--color-input);
 }
 
 .search input:focus {
