--- a/src/components/control-bar/regions/Regions.module.css
+++ b/src/components/control-bar/regions/Regions.module.css
@@ -45,17 +45,33 @@
 }
 
 .options li {
+  position: relative;
+  width: fit-content;
   cursor: pointer;
   opacity: 0;
   transition: opacity 0.3s ease, transform 0.3s ease;
 }
 
-.options li:hover {
-  transform: scale(1.1);
+.options li:after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  transform: scaleX(0);
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: var(--color-text);
+  transform-origin: bottom right;
+  transition: transform 0.25s ease-out;
+}
+
+.options li:hover:after {
+  transform: scaleX(1);
+  transform-origin: bottom left;
 }
 
 .options li:active {
-  transform: scale(0.98);
+  transform: scale(0.95);
 }
 
 .options li:not(:first-child) {
@@ -67,4 +83,15 @@
 }
 .options.droped li {
   opacity: 1;
+}
+
+.selected:after {
+  content: '';
+  position: absolute;
+  transform: scaleX(1);
+  width: 100%;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: var(--color-text);
 }
