--- a/src/components/control-bar/search/Search.module.css
+++ b/src/components/control-bar/search/Search.module.css
@@ -6,6 +6,8 @@
   align-items: center;
   padding: 0 3rem;
   color: var(--color-input);
+  position: relative;
+  overflow: visible;
 }
 
 .search input {
@@ -15,6 +17,8 @@
   font-size: 1.4rem;
   margin-left: 3rem;
   background-color: transparent;
+  width: 100%;
+  flex-shrink: 0;
 }
 
 .search input::placeholder {
@@ -31,4 +35,15 @@
 
 .icon {
   font-size: 1.6rem;
+}
+
+.error {
+  border: 1px solid red;
+}
+
+.error_text {
+  position: absolute;
+  top: 6rem;
+  text-align: left;
+  color: red;
 }
