--- a/src/components/UI/header/Header.module.css
+++ b/src/components/UI/header/Header.module.css
@@ -37,3 +37,13 @@
   margin-left: 1.6rem;
   font-weight: 800;
 }
+
+@media screen and (max-width: 500px) {
+  .logo {
+    font-size: 1.8rem;
+  }
+
+  .theme-switcher p {
+    font-size: 1.4rem;
+  }
+}
