--- a/src/components/control-bar/Control.module.css
+++ b/src/components/control-bar/Control.module.css
@@ -8,3 +8,11 @@
   margin-top: 5rem;
   gap: 2rem;
 }
+
+@media screen and (max-width: 680px) {
+  .control {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 5rem;
+  }
+}
