--- a/src/components/country-detail/Country.module.css
+++ b/src/components/country-detail/Country.module.css
@@ -60,6 +60,16 @@
   font-display: flex;
   align-self: center;
   text-align: center;
+  transition: transform 0.3s ease;
+  cursor: pointer;
+}
+
+.border:hover {
+  transform: scale(1.05);
+}
+
+.border:active {
+  transform: scale(0.98);
 }
 
 @media screen and (max-width: 1100px) {
