--- a/src/components/control-bar/search/Search.module.css
+++ b/src/components/control-bar/search/Search.module.css
@@ -2,9 +2,8 @@
   max-width: 48rem;
   width: 100%;
   height: 5.6rem;
-  display: flex;
-  align-items: center;
-  padding: 0 3rem;
+
+  padding: 2rem 3rem;
   color: var(--color-input);
   position: relative;
   overflow: visible;
@@ -18,7 +17,6 @@
   margin-left: 3rem;
   background-color: transparent;
   width: 100%;
-  flex-shrink: 0;
 }
 
 .search input::placeholder {
@@ -35,6 +33,8 @@
 
 .icon {
   font-size: 1.6rem;
+
+  position: absolute;
 }
 
 .error {
